--- a/MergeConflicts/home.html
+++ b/MergeConflicts/home.html
@@ -1,4 +1,4 @@
-<h1> Home Page </h1>
+<h1>Date Home Page </h1>
 Links
-<Dateandtime>
-<contact>
+<Dateandtime Mode=Week>
+<contact value="9944702628">
